# CoteValentines2023

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
migrations/2023-02-03-131753_create_letters/: down.sql  up.sql
migrations/2023-02-05-092608_add_message_id_col/: down.sql  up.sql
migrations/2023-02-05-201504_add-sender-id-to-letters/: down.sql  up.sql
migrations/2023-02-05-205424_add-recipient-names-table/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
src/commands/: add_recipient.rs  allow_letters.rs  delete.rs  log_letters.rs  mod.rs  publish.rs  send.rs
src/db/: mod.rs  model.rs
