[package]
name = "cotevalentines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = {version = "1.0.152", features = ["derive"]}
rmp-serde = "1.1.1"
serde_json = "1.0"
jammdb = "0.9.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11"
