[package]
name = "cotevalentines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11"

[dependencies.diesel]
version = "*"
features = [ "sqlite", "r2d2" ]
