[package]
name = "cotevalentines"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/MiraiSubject/CoteValentines2023"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
diesel_migrations = {version = "2.0.0", features = ["sqlite"]}
chrono = "0.4.23"
ellipse = "0.2.0"
random_color = "0.6.1"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11"

[dependencies.diesel]
version = "*"
features = [ "sqlite", "r2d2", "returning_clauses_for_sqlite_3_35" ]

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]